tests/fixtures/invalid/tuple_bool.py
# Cannot call tuple() with Bool
x = tuple(True)
